[package]
name = "online-judge-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
base64 = "0.22.1"
lambda_http = "0.14.0"
nix = { version = "0.29.0", features = ["signal"] }
regex = "1.11.1"
serde = { version = "1.0.218", features = ["std", "derive"] }
shell-words = "1.1.0"
tempfile = "3.18.0"

tokio = { version = "1", features = ["macros"] }

