[package]
name = "online-judge-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0.97"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.78.0"
axum = "0.8.1"
base64 = "0.22.1"
bytes = "1.10.1"
lambda_http = "0.14.0"
nix = { version = "0.29.0", features = ["signal"] }
regex = "1.11.1"
serde = { version = "1.0.218", features = ["std", "derive"] }
serde_json = "1"
shell-words = "1.1.0"
tempfile = "3.18.0"

tokio = { version = "1", features = ["macros"] }
tracing = "0.1.41"
uuid = { version = "1.15.1", features = ["v4"] }

